docs: adjust .env.example to reflect .env

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,26 @@
-# API Keys (Required to enable respective provider)
-ANTHROPIC_API_KEY=your_anthropic_api_key_here       # Required: Format: sk-ant-api03-...
-PERPLEXITY_API_KEY=your_perplexity_api_key_here     # Optional: Format: pplx-...
-OPENAI_API_KEY=your_openai_api_key_here             # Optional, for OpenAI/OpenRouter models. Format: sk-proj-...
-GOOGLE_API_KEY=your_google_api_key_here             # Optional, for Google Gemini models.
-MISTRAL_API_KEY=your_mistral_key_here               # Optional, for Mistral AI models.
-XAI_API_KEY=YOUR_XAI_KEY_HERE                       # Optional, for xAI AI models.
-AZURE_OPENAI_API_KEY=your_azure_key_here            # Optional, for Azure OpenAI models (requires endpoint in .taskmasterconfig).
+# --- Required ---
+# For LinkedIn scraping via SerpApi or similar service
+SCRAPING_API_KEY=
+
+# Path to the internal SQLite database file
+# Example: sqlite:///leads.db (for a file named leads.db in the root)
+# Example: sqlite:///database/my_leads.db (for a file in a 'database' subfolder)
+DB_PATH=sqlite:///leads.db
+
+# --- Optional (for Job Board Integration - Task 6 & 7) ---
+# LEVER_API_KEY=YOUR_LEVER_API_KEY_HERE
+# GREENHOUSE_BOARD_TOKENS=YOUR_COMPANY_TOKEN_1,YOUR_COMPANY_TOKEN_2 # Comma-separated Greenhouse board tokens
+
+# --- Optional (for Notion Export - Task 16) ---
+# NOTION_API_KEY=YOUR_NOTION_INTEGRATION_TOKEN_HERE
+# NOTION_DATABASE_ID=YOUR_NOTION_DATABASE_ID_HERE
+
+# --- Optional (For Direct LinkedIn Scraping - Advanced, High Risk) ---
+# LINKEDIN_EMAIL=your_linkedin_email@example.com
+# LINKEDIN_PASSWORD=your_linkedin_password
+
+# --- Application Settings (Can also be set here or defaults used) ---
+# TARGET_SCHOOLS=Questrom,University School
+# TARGET_LOCATION="New York City"
+# PM_KEYWORDS=Product Manager,Senior Product Manager
+# LOG_LEVEL=INFO
