--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ python-dotenv
 # API Framework
 fastapi
 uvicorn[standard] # Includes standard dependencies like websockets, needed for Uvicorn server
+pydantic[email] # For robust email validation in Pydantic models
 
 # Job Board APIs (Specific libraries if available, otherwise requests is used)
 # (No specific libraries added yet)
@@ -32,6 +33,7 @@ pytest-cov
 pytest-mock # For pytest integration with unittest.mock
 requests-mock # For mocking HTTP requests in tests
 mock # Built-in, but sometimes explicitly listed
+freezegun # For time manipulation in tests
 
 # Additional libraries
 flask
