feat: Create lessons.txt with insights for ILA development

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,10 @@ SCRAPING_API_KEY=
 # Example: sqlite:///database/my_leads.db (for a file in a 'database' subfolder)
 DB_PATH=sqlite:///leads.db
 
+
+# For Taskmaster-ai
+ANTHROPIC_API_KEY=
+
 # --- Optional (for Job Board Integration - Task 6 & 7) ---
 # LEVER_API_KEY=YOUR_LEVER_API_KEY_HERE
 # GREENHOUSE_BOARD_TOKENS=YOUR_COMPANY_TOKEN_1,YOUR_COMPANY_TOKEN_2 # Comma-separated Greenhouse board tokens
